:art: add new experience to page

--- a/style.css
+++ b/style.css
@@ -1,6 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Oswald:wght@200..700&family=Roboto:wght@500;700&family=Young+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+:root {
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+}
 
 
+.js-scroll {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+.js-scroll.scroll-in {
+    opacity: 1;
+}
 
 
 .navbar {
@@ -10,6 +45,8 @@
     justify-content: space-between;
     padding: 0.5rem 1rem;
 }
+
+
 
 .navbar-brand{
     font-family: "Oswald", sans-serif;
@@ -26,6 +63,15 @@ h1, h2, h3, h4{
     font-style: normal;
     font-size: 3rem;
 }
+
+  
+
+.font{
+    font-family: var(--bs-font-sans-serif);
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 350;
+  }
 
 
 ul{
@@ -49,6 +95,31 @@ section.resume-section {
     padding-bottom: 5rem;
     max-width: 75rem;
 }
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    padding: 20px;
+}
+
+.box {
+    background-color: #f0f0f0;
+    text-align: center;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.box img {
+    width: 100%;
+    height: auto;
+    max-height: 250px;
+    object-fit: cover;
+}
+
+
+
 
 .social-icons .social-icon {
     display: inline-flex;
@@ -76,9 +147,8 @@ section.resume-section {
 }
 
 p.lead {
-    font-family: "Oswald", sans-serif;
-    font-size: 1.3rem;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 .socials{
@@ -282,7 +352,6 @@ section.resume-section {
 
 
 p.lead {
-    font-family: "Oswald", sans-serif;
     font-size: 1.3rem;
     font-weight: 300;
 }
